# godlocal

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_v6.md  contributors.html  docker-compose.yml  god_soul.example.md  godlocal_telegram.py  godlocal_v5.py  godlocal_v6.py  index.html  install.sh  mode_switcher.py  oasis_autogenesis.py  package.json  paroquant_backend.py  performance_logger.py  pyproject.toml  pytest.ini  requirements-vercel.txt  requirements.txt  self_evolve.py  server.js  setup_mobile_o.sh  setup_picobot.sh  sleep_scheduler.py  sleep_scheduler_v6.py  test_airllm.py  utils.py  vercel.json
.claude/: settings.json
.github/: FUNDING.yml
agents/: __init__.py  agent_pool.py  autogenesis_v2.py  claw_feed.py  goal_executor.py
api/: index.py  requirements.txt
core/: __init__.py  agent_pool.py  airllm_bridge.py  bitnet_bridge.py  brain.py  cerebras_bridge.py  claude_code_bridge.py  consciousness_pipe.py  free_transformer_bridge.py  groq_connector.py  hardware_probe.py  lfm2_bridge.py  llmfit_bridge.py  settings.py  skill_orchestra.py  sparknet_persistence.py  taalas_bridge.py  tiered_router.py  xzero_circuit_breaker.py
docs/: hardware_probe_router.py  status_hardware_endpoint.py
extensions/: __init__.py
extensions/xzero/xzero_swap_cli/: Cargo.toml  README.md
extensions/xzero/xzero_swap_cli/src/: dca.rs  jupiter.rs  main.rs  tokens.rs
mobile/: AgentView.swift  AudioBridgeMLX.swift  Config.swift  EvolveView.swift  IPHONE17PRO_GUIDE.md  LogView.swift  (+10 more)
(+77 files in other folders)
