[package]
name = "xzero-swap"
version = "0.1.0"
edition = "2021"
description = "X-ZERO Solana swap CLI — Jupiter + DCA + Helius for GodLocal agents"
authors = ["GodLocal <GODLOCAL>"]

[[bin]]
name = "xzero-swap"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
clap         = { version = "4", features = ["derive", "env"] }
anyhow       = "1"
solana-sdk   = "2"
base64        = "0.22"
colored       = "2"
dotenv        = "0.15"
